# pytemplate

./: .flake8  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  justfile  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
tests/unit/: test_pytemplate.py
