[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = "Template for a Python project"
authors = [
    "SamWarden <SamWardenSad@gmail.com>",
]
maintainers = [
    "SamWarden <SamWardenSad@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SamWarden/pytemplate"
repository = "https://github.com/SamWarden/pytemplate"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^2.17.4"
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.black]
line-length = 120
target-version = ["py311"]
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
