[project]
name = "pytemplate"
version = "0.1.0"
description = "Template for a Python project"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
]

[project.optional-dependencies]
dev = ["pre-commit==3.8.*"]
test = ["pytest==8.3.*"]
lint = [
    "mypy==1.11.*",
    "ruff==0.6.*",
    "pylint==3.2.*",
]

[project.urls]
Homepage = "https://github.com/SamWarden/pytemplate"
Repository = "https://github.com/SamWarden/pytemplate"
Issues = "https://github.com/SamWarden/pytemplate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ['setuptools==75.1.0']
build-backend = 'setuptools.build_meta'
