[project]
name = "pytemplate"
version = "0.1.0"
description = "Template for a Python project"
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
]

[project.optional-dependencies]
dev = ["pre-commit==4.1.*"]
test = ["pytest==8.3.*"]
lint = [
    "mypy==1.15.*",
    "ruff==0.9.*",
    "pylint==3.3.*",
]

[project.urls]
Homepage = "https://github.com/SamWarden/pytemplate"
Repository = "https://github.com/SamWarden/pytemplate"
Issues = "https://github.com/SamWarden/pytemplate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ['setuptools==75.8.0']
build-backend = 'setuptools.build_meta'
